First draft of index block on Home page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -231,6 +231,49 @@
 </section>
 <section class="main-home">
   <div class="inner">
+    <div class="half visual">
+      <div class="wrapper" id="indexes">
+        <div class="indexes-block">
+          <div class="card" id="middle" style="background-image: linear-gradient(0deg, #232323 0%, rgba(35, 35, 35, 0.00) 50%), url(&quot;../assets/cards/{{unit?.slug}}2.webp&quot;);">
+            <div class="content-wrapper">
+              <div class="{{unit?.tag}}-tag">{{unit?.tag}}</div>
+              <div class="details-container">
+                <h5 class="name">{{unit?.name[0]}}</h5>
+                <div class="type-and-buffs">
+                  <div class="icons">
+                    <img src="assets/elements/{{unit?.resonance}}.png" alt="{{unit?.resonance}} resonance">
+                    <img src="assets/elements/{{unit?.element}}.png" alt="{{unit?.element}} element">
+                  </div>
+                  <div class="buffs">
+                    <img *ngFor="let role of unit?.roles" [src]="'assets/effects/buff_' + role?.toLowerCase() + '.png'" [alt]="role">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="card" id="left" style="background-image: url(&quot;../assets/matrices/{{matrix?.slug}}_matrix.webp&quot;);">
+
+          </div>
+          <div class="card" id="right">
+
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="half text">
+      <div class="wrapper">
+        <div class="quote-block">
+          <h3 class="title">Indexes</h3>
+          <p class="quote">“Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ut tortor eget felis
+            maximus ullamcorper.“</p>
+          <span class="name">- Someone</span>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="main-home">
+  <div class="inner">
     <div class="discord">
       <span class="subtitle">
         Have questions, found a bug or want to discuss?
