--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -360,13 +360,216 @@
             }
 
             .wrapper#indexes {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                gap: 20px;
+                
                 .indexes-block {
-                    .card#middle {
-                        width: 220px;
-                        height: 280px;
+                    display: flex;
+                    align-items: center;
+                    position: relative;
+
+                    .side-card#right {
+                        position: relative;
+                        rotate: 15deg;
+                        top: 20px;
+                        right: 50px;
+                        width: 210px;
+                        height: 230px;
+                        background-size: cover;
+                        background-repeat: no-repeat; // weird edge case
+                        border-radius: 8px;
+                        padding: 10px;
+                
+                        // this is better on the cards themselves rather than the relic-wrapper
+                        // as when the back-card gets put on top, it doesn't have a border to distinguish itself from the body
+                
+                        border: 1px $border solid;
+                
+                        .content-wrapper {
+                            position: relative;
+                            height: 100%;
+                            display: flex;
+                            align-items: flex-end;
+                            background-position: 80% -10%;
+                            background-size: 90%;
+                            background-repeat: no-repeat; // weird edge case
+                
+                            .utility-tag {
+                                font-size: 10px;
+                                background-color: #AE150B;
+                                border-radius: 8px 0 8px 0;
+                                width: fit-content;
+                                padding: 2px 6px;
+                                position: absolute;
+                                text-transform: capitalize;
+                                top: 0;
+                            }
+                
+                            .battle-tag {
+                                font-size: 10px;
+                                background-color: #1f71b4;
+                                border-radius: 8px 0 8px 0;
+                                width: fit-content;
+                                padding: 2px 6px;
+                                position: absolute;
+                                text-transform: capitalize;
+                                top: 0;
+                            }
+                
+                            .standard-tag {
+                                font-size: 10px;
+                                background-color: rgb(192, 112, 15);
+                                border-radius: 8px 0 8px 0;
+                                width: fit-content;
+                                padding: 2px 6px;
+                                position: absolute;
+                                text-transform: capitalize;
+                                top: 0;
+                            }
+                
+                            .details-container {
+                                display: flex;
+                                flex-direction: column;
+                                width: 100%;
+                                gap: 2px;
+                
+                                .name {
+                                    font-size: 20px;
+                                    font-weight: 600;
+                                    text-transform: uppercase;
+                                    margin: unset;
+                                }
+                
+                                img {
+                                    width: 28px;
+                                    height: fit-content;
+                                }
+                
+                                .type-and-rarity {
+                                    display: flex;
+                                    width: 100%;
+                                    flex-direction: row;
+                                    justify-content: space-between;
+                
+                                    .icons,
+                                    .rarity {
+                                        font-weight: 600;
+                                        font-size: 20px;
+                                        display: flex;
+                                        flex-direction: row;
+                                        gap: 2px;
+                                        align-items: center;
+                                        line-height: normal;
+                                    }
+                                }
+                            }
+                        }
                     }
 
-                    .card {
+                    .side-card#left {
+                        position: relative;
+                        rotate: -15deg;
+                        top: 20px;
+                        left: 50px;
+                        width: 210px;
+                        height: 230px;
+                        background-position: center;
+                        background-size: cover;
+                        background-repeat: no-repeat; // weird edge case
+                        border-radius: 8px;
+                        padding: 10px;
+                
+                        // this is better on the cards themselves rather than the unit-wrapper
+                        // as when the back-card gets put on top, it doesn't have a border to distinguish itself from the body
+                
+                        border: 1px $border solid;
+                
+                        .content-wrapper {
+                            position: relative;
+                            height: 100%;
+                            display: flex;
+                            align-items: flex-end;
+                            background-position: 80% -10%;
+                            background-size: 90%;
+                            background-repeat: no-repeat; // weird edge case
+                
+                            .new-tag {
+                                font-size: 10px;
+                                background-color: #AE150B;
+                                border-radius: 8px 0 8px 0;
+                                width: fit-content;
+                                padding: 2px 6px;
+                                position: absolute;
+                                text-transform: capitalize;
+                                top: 0;
+                            }
+                
+                            .meta-tag {
+                                font-size: 10px;
+                                background-color: #1f71b4;
+                                border-radius: 8px 0 8px 0;
+                                width: fit-content;
+                                padding: 2px 6px;
+                                position: absolute;
+                                text-transform: capitalize;
+                                top: 0;
+                            }
+                
+                            .standard-tag {
+                                font-size: 10px;
+                                background-color: rgb(192, 112, 15);
+                                border-radius: 8px 0 8px 0;
+                                width: fit-content;
+                                padding: 2px 6px;
+                                position: absolute;
+                                text-transform: capitalize;
+                                top: 0;
+                            }
+                
+                            .details-container {
+                                display: flex;
+                                flex-direction: column;
+                                width: 100%;
+                                gap: 2px;
+                
+                                .name {
+                                    font-size: 20px;
+                                    font-weight: 600;
+                                    text-transform: uppercase;
+                                    margin: unset;
+                                }
+                
+                                img {
+                                    width: 28px;
+                                    height: fit-content;
+                                }
+                
+                                .type-and-buffs {
+                                    display: flex;
+                                    width: 100%;
+                                    flex-direction: row;
+                                    justify-content: space-between;
+                
+                                    .icons,
+                                    .buffs {
+                                        font-weight: 600;
+                                        font-size: 20px;
+                                        display: flex;
+                                        flex-direction: row;
+                                        gap: 2px;
+                                    }
+                                }
+                            }
+                        }
+                    }
+
+                    .main-card#middle {
+                        z-index: 3;
+                        position: relative;
+                        width: 220px;
+                        height: 280px;
                         background-position: center;
                         background-size: cover;
                         background-repeat: no-repeat; // weird edge case
@@ -488,6 +691,16 @@
             }
         }
     }
+}
+
+.ssr-class {
+    color: #FFDB9B;
+    /* Define styles for SSR rarity */
+}
+
+.sr-class {
+    color: #D6CDFF;
+    /* Define styles for SR rarity */
 }
 
 // .flowc {
