--- a/src/app/units-index/units-index.component.html
+++ b/src/app/units-index/units-index.component.html
@@ -24,7 +24,7 @@
       </div>
     </div>
     <div class="type">
-      <h5 class="title">Type</h5>
+      <h5 class="title">Resonance</h5>
       <div class="wrapper">
         <img src="../assets/elements/attack.png" alt="DPS Type" data-type="damage">
         <img src="../assets/elements/benediction.png" alt="Benediction Type" data-type="benediction">
